fix: 🐛 z-index of .mw-rcfilters-ui-overlay

--- a/skinStyles/mediawiki/mediawiki.rcfilters.filters.base.styles.less
+++ b/skinStyles/mediawiki/mediawiki.rcfilters.filters.base.styles.less
@@ -24,7 +24,7 @@
 	}
 
 	.mw-rcfilters-ui-overlay {
-		z-index: ~'calc( '@z-index-page-header~' + 1 )';
+		z-index: 13; // @z-index-page-header + 1
 	}
 }
 
